--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <div class="gallery">
     <div class="item">
-      <img src="images/image001.png" alt="Sea waves">
+      <img src="https://picsum.photos/id/1043/400/300" alt="Sea waves">
       <div class="caption">Beautiful mountain view</div>
     </div>
     <div class="item">
