--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       font-size: 14px;
       color: #333;
     }
+    .figure-text {
+      margin-top: 30px; /* Adds space above the text */
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
@@ -66,5 +70,8 @@
       <div class="caption">Bridge over calm waters</div>
     </div>
   </div>
+
+  <p class="figure-text">FIG. 1 PCB defect detection</p>
+
 </body>
 </html>
