--- a/index.html
+++ b/index.html
@@ -46,28 +46,37 @@
 
   <div class="gallery">
     <div class="item">
-      <img src="https://picsum.photos/id/1043/400/300" alt="Sea waves">
-      <div class="caption">Beautiful mountain view</div>
+      <img src="images/image001.png" alt="Sea waves">
     </div>
     <div class="item">
-      <img src="https://picsum.photos/id/1025/400/300" alt="Dog">
-      <div class="caption">A friendly dog posing</div>
+      <img src="images/image002.png" alt="Dog">
     </div>
     <div class="item">
-      <img src="https://picsum.photos/id/1035/400/300" alt="Forest">
-      <div class="caption">Green forest scenery</div>
+      <img src="images/image003.png" alt="Forest">
     </div>
     <div class="item">
-      <img src="https://picsum.photos/id/1043/400/300" alt="Sea waves">
-      <div class="caption">Relaxing ocean waves</div>
+      <img src="images/image004.png" alt="Sea waves">
     </div>
     <div class="item">
-      <img src="https://picsum.photos/id/1059/400/300" alt="Road trip">
-      <div class="caption">Open road adventure</div>
+      <img src="images/image005.png" alt="Road trip">
     </div>
     <div class="item">
-      <img src="https://picsum.photos/id/1069/400/300" alt="Bridge">
-      <div class="caption">Bridge over calm waters</div>
+      <img src="images/image006.png" alt="Bridge">
+    </div>
+    <div class="item">
+      <img src="images/image007.png" alt="New Image 7">
+    </div>
+    <div class="item">
+      <img src="images/image008.png" alt="New Image 8">
+    </div>
+    <div class="item">
+      <img src="images/image009.png" alt="New Image 9">
+    </div>
+    <div class="item">
+      <img src="images/image010.png" alt="New Image 10">
+    </div>
+    <div class="item">
+      <img src="images/image011.png" alt="New Image 11">
     </div>
   </div>
 
