--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </style>
 </head>
 <body>
-  <h1>Picsum Image Gallery</h1>
+  <h1>PCB Defect</h1>
 
   <div class="gallery">
     <div class="item">
