--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
     <div class="item">
       <img src="images/image0011.png" alt="New Image 11">
     </div>
+     <div class="item">
+      <img src="images/image0012.png" alt="New Image 11">
+    </div>
+     <div class="item">
+      <img src="images/image0013.png" alt="New Image 11">
+    </div>
   </div>
 
   <p class="figure-text">FIG. 1 PCB defect detection</p>
