--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
 
   <div class="gallery">
     <div class="item">
-      <img src="images/image001.png" alt="Sea waves">
+      <img src="images/image001.png" alt="New Image 1">
     </div>
     <div class="item">
-      <img src="images/image002.png" alt="Dog">
+      <img src="images/image002.png" alt="New Image 2">
     </div>
     <div class="item">
-      <img src="images/image003.png" alt="Forest">
+      <img src="images/image003.png" alt="New Image 3">
     </div>
     <div class="item">
-      <img src="images/image004.png" alt="Sea waves">
+      <img src="images/image004.png" alt="SNew Image 4">
     </div>
     <div class="item">
-      <img src="images/image005.png" alt="Road trip">
+      <img src="images/image005.png" alt="New Image 5">
     </div>
     <div class="item">
-      <img src="images/image006.png" alt="Bridge">
+      <img src="images/image006.png" alt="New Image 6">
     </div>
     <div class="item">
       <img src="images/image007.png" alt="New Image 7">
@@ -79,10 +79,10 @@
       <img src="images/image0011.png" alt="New Image 11">
     </div>
      <div class="item">
-      <img src="images/image0012.png" alt="New Image 11">
+      <img src="images/image0012.png" alt="New Image 12">
     </div>
      <div class="item">
-      <img src="images/image0013.png" alt="New Image 11">
+      <img src="images/image0013.png" alt="New Image 13">
     </div>
   </div>
 
