--- a/index.html
+++ b/index.html
@@ -86,7 +86,20 @@
     </div>
   </div>
 
-  <p class="figure-text">FIG. 1 PCB defect detection</p>
+  <p class="figure-text">FIG. 1 shows a PCB with excess solder bridging at pad 13 and thin wires, indicating a defect.
+FIG. 2 reveals a burnt central component with irregular soldering and wires, suggesting a defective PCB.
+FIG. 3 displays a burnt area affecting several components, indicating thermal damage and a defective board.
+FIG. 4 shows burn marks around R1 and compromised solder joints, marking the PCB as defective.
+FIG. 5 shows a clean layout but with central damage or cracking, suggesting a possible defect.
+FIG. 6 shows a large solder blob and custom wiring, indicating a defective or non-compliant PCB.
+FIG. 7 shows solder bridging and thin wires, suggesting poor soldering and a defective board.
+FIG. 8 shows messy soldering in the top right corner, indicating a defect that may affect reliability.
+FIG. 9 features excess solder forming a bridge, posing short-circuit risks and marking it as defective.
+FIG. 10 shows a clean layout with intact traces and no damage, indicating the PCB is not defective.
+FIG. 11 reveals overheating and burn damage from heavy soldering, making the PCB defective.
+FIG. 12 displays a clean layout with no visible damage, indicating the PCB is not defective.
+FIG. 13 presents a clean layout with intact traces, showing the PCB is not defective.
+</p>
 
 </body>
 </html>
