--- a/index.html
+++ b/index.html
@@ -84,6 +84,27 @@
      <div class="item">
       <img src="images/image0013.png" alt="New Image 13">
     </div>
+    <div class="item">
+      <img src="images/image0014.png" alt="New Image 14">
+    </div>
+    <div class="item">
+      <img src="images/image0015.png" alt="New Image 15">
+    </div>
+    <div class="item">
+      <img src="images/image0016.png" alt="New Image 16">
+    </div>
+    <div class="item">
+      <img src="images/image0017.png" alt="SNew Image 17">
+    </div>
+    <div class="item">
+      <img src="images/image0018.png" alt="New Image 18">
+    </div>
+    <div class="item">
+      <img src="images/image0019.png" alt="New Image 19">
+    </div>
+     <div class="item">
+      <img src="images/image0020.png" alt="New Image 20">
+    </div>
   </div>
 
   <p class="figure-text">FIG. 1 shows a PCB with excess solder bridging at pad 13 and thin wires, indicating a defect.
