--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@ FIG. 10 shows a clean layout with intact traces and no damage, indicating the PC
 FIG. 11 reveals overheating and burn damage from heavy soldering, making the PCB defective.
 FIG. 12 displays a clean layout with no visible damage, indicating the PCB is not defective.
 FIG. 13 presents a clean layout with intact traces, showing the PCB is not defective.
+FIG. 14 shows a PCB with a large solder blob and burn marks, indicating poor soldering and overheating; the PCB is defective.
+FIG. 15 displays a burnt, charred area with melted solder and damaged traces, suggesting electrical failure; the PCB is defective.
+FIG. 16 shows similar thermal damage and short-circuit signs as FIG. 15, making the PCB defective.
+FIG. 17 shows a burnt area with exposed wires and charred connections, indicating serious electrical failure; the PCB is defective.
+FIG. 18 shows excessive solder covering pads 13 to 16, suggesting overheating and poor soldering; the PCB is defective.
+FIG. 19 shows excessive soldering and thermal stress near the top center, indicating poor practices and heat damage; the PCB is defective.
+FIG. 20 displays a prominent burn mark with melted solder and wires, suggesting serious electrical fault; the PCB is defective.
 </p>
 
 </body>
