--- a/index.html
+++ b/index.html
@@ -105,6 +105,66 @@
      <div class="item">
       <img src="images/image0020.png" alt="New Image 20">
     </div>
+    <div class="item">
+      <img src="images/image0021.png" alt="New Image 21">
+    </div>
+    <div class="item">
+      <img src="images/image0022.png" alt="New Image 22">
+    </div>
+    <div class="item">
+      <img src="images/image0023.png" alt="New Image 23">
+    </div>
+    <div class="item">
+      <img src="images/image0024.png" alt="SNew Image 24">
+    </div>
+    <div class="item">
+      <img src="images/image0025.png" alt="New Image 25">
+    </div>
+    <div class="item">
+      <img src="images/image0026.png" alt="New Image 26">
+    </div>
+    <div class="item">
+      <img src="images/image0027.png" alt="New Image 27">
+    </div>
+    <div class="item">
+      <img src="images/image0028.png" alt="New Image 28">
+    </div>
+    <div class="item">
+      <img src="images/image0029.png" alt="New Image 29">
+    </div>
+    <div class="item">
+      <img src="images/image0030.png" alt="New Image 30">
+    </div>
+    <div class="item">
+      <img src="images/image0031.png" alt="New Image 31">
+    </div>
+     <div class="item">
+      <img src="images/image0032.png" alt="New Image 32">
+    </div>
+     <div class="item">
+      <img src="images/image0033.png" alt="New Image 33">
+    </div>
+    <div class="item">
+      <img src="images/image0034.png" alt="New Image 34">
+    </div>
+    <div class="item">
+      <img src="images/image0035.png" alt="New Image 35">
+    </div>
+    <div class="item">
+      <img src="images/image0036.png" alt="New Image 36">
+    </div>
+    <div class="item">
+      <img src="images/image0037.png" alt="SNew Image 37">
+    </div>
+    <div class="item">
+      <img src="images/image0038.png" alt="New Image 38">
+    </div>
+    <div class="item">
+      <img src="images/image0039.png" alt="New Image 39">
+    </div>
+     <div class="item">
+      <img src="images/image0040.png" alt="New Image 40">
+    </div>
   </div>
 
   <p class="figure-text">FIG. 1 shows a PCB with excess solder bridging at pad 13 and thin wires, indicating a defect.
