--- a/index.html
+++ b/index.html
@@ -165,6 +165,186 @@
      <div class="item">
       <img src="images/image0040.png" alt="New Image 40">
     </div>
+      <div class="item">
+      <img src="images/image0041.png" alt="New Image 41">
+    </div>
+    <div class="item">
+      <img src="images/image0042.png" alt="New Image 42">
+    </div>
+    <div class="item">
+      <img src="images/image0043.png" alt="New Image 43">
+    </div>
+    <div class="item">
+      <img src="images/image0044.png" alt="SNew Image 44">
+    </div>
+    <div class="item">
+      <img src="images/image0045.png" alt="New Image 45">
+    </div>
+    <div class="item">
+      <img src="images/image0046.png" alt="New Image 46">
+    </div>
+    <div class="item">
+      <img src="images/image0047.png" alt="New Image 47">
+    </div>
+    <div class="item">
+      <img src="images/image0048.png" alt="New Image 48">
+    </div>
+    <div class="item">
+      <img src="images/image0049.png" alt="New Image 49">
+    </div>
+    <div class="item">
+      <img src="images/image0050.png" alt="New Image 50">
+    </div>
+    <div class="item">
+      <img src="images/image0051.png" alt="New Image 51">
+    </div>
+     <div class="item">
+      <img src="images/image0052.png" alt="New Image 52">
+    </div>
+     <div class="item">
+      <img src="images/image0053.png" alt="New Image 53">
+    </div>
+    <div class="item">
+      <img src="images/image0054.png" alt="New Image 54">
+    </div>
+    <div class="item">
+      <img src="images/image0055.png" alt="New Image 55">
+    </div>
+    <div class="item">
+      <img src="images/image0056.png" alt="New Image 56">
+    </div>
+    <div class="item">
+      <img src="images/image0057.png" alt="SNew Image 57">
+    </div>
+    <div class="item">
+      <img src="images/image0058.png" alt="New Image 58">
+    </div>
+    <div class="item">
+      <img src="images/image0059.png" alt="New Image 59">
+    </div>
+     <div class="item">
+      <img src="images/image0060.png" alt="New Image 60">
+    </div>
+    <div class="item">
+      <img src="images/image0061.png" alt="New Image 61">
+    </div>
+    <div class="item">
+      <img src="images/image0062.png" alt="New Image 62">
+    </div>
+    <div class="item">
+      <img src="images/image0063.png" alt="New Image 63">
+    </div>
+    <div class="item">
+      <img src="images/image0064.png" alt="SNew Image 64">
+    </div>
+    <div class="item">
+      <img src="images/image0065.png" alt="New Image 65">
+    </div>
+    <div class="item">
+      <img src="images/image0066.png" alt="New Image 66">
+    </div>
+    <div class="item">
+      <img src="images/image0067.png" alt="New Image 67">
+    </div>
+    <div class="item">
+      <img src="images/image0068.png" alt="New Image 68">
+    </div>
+    <div class="item">
+      <img src="images/image0069.png" alt="New Image 69">
+    </div>
+    <div class="item">
+      <img src="images/image0070.png" alt="New Image 70">
+    </div>
+    <div class="item">
+      <img src="images/image0071.png" alt="New Image 71">
+    </div>
+     <div class="item">
+      <img src="images/image0072.png" alt="New Image 72">
+    </div>
+     <div class="item">
+      <img src="images/image0073.png" alt="New Image 73">
+    </div>
+    <div class="item">
+      <img src="images/image0074.png" alt="New Image 74">
+    </div>
+    <div class="item">
+      <img src="images/image0075.png" alt="New Image 75">
+    </div>
+    <div class="item">
+      <img src="images/image0076.png" alt="New Image 76">
+    </div>
+    <div class="item">
+      <img src="images/image0077.png" alt="SNew Image 77">
+    </div>
+    <div class="item">
+      <img src="images/image0078.png" alt="New Image 78">
+    </div>
+    <div class="item">
+      <img src="images/image0079.png" alt="New Image 79">
+    </div>
+     <div class="item">
+      <img src="images/image0080.png" alt="New Image 80">
+    </div>
+     <div class="item">
+      <img src="images/image0081.png" alt="New Image 81">
+    </div>
+    <div class="item">
+      <img src="images/image0082.png" alt="New Image 82">
+    </div>
+    <div class="item">
+      <img src="images/image0083.png" alt="New Image 83">
+    </div>
+    <div class="item">
+      <img src="images/image0084.png" alt="SNew Image 84">
+    </div>
+    <div class="item">
+      <img src="images/image0085.png" alt="New Image 85">
+    </div>
+    <div class="item">
+      <img src="images/image0086.png" alt="New Image 86">
+    </div>
+    <div class="item">
+      <img src="images/image0087.png" alt="New Image 87">
+    </div>
+    <div class="item">
+      <img src="images/image0088.png" alt="New Image 88">
+    </div>
+    <div class="item">
+      <img src="images/image0089.png" alt="New Image 89">
+    </div>
+    <div class="item">
+      <img src="images/image0090.png" alt="New Image 90">
+    </div>
+    <div class="item">
+      <img src="images/image0091.png" alt="New Image 91">
+    </div>
+     <div class="item">
+      <img src="images/image0092.png" alt="New Image 92">
+    </div>
+     <div class="item">
+      <img src="images/image0093.png" alt="New Image 93">
+    </div>
+    <div class="item">
+      <img src="images/image0094.png" alt="New Image 94">
+    </div>
+    <div class="item">
+      <img src="images/image0095.png" alt="New Image 95">
+    </div>
+    <div class="item">
+      <img src="images/image0096.png" alt="New Image 96">
+    </div>
+    <div class="item">
+      <img src="images/image0097.png" alt="SNew Image 97">
+    </div>
+    <div class="item">
+      <img src="images/image0098.png" alt="New Image 98">
+    </div>
+    <div class="item">
+      <img src="images/image0099.png" alt="New Image 99">
+    </div>
+     <div class="item">
+      <img src="images/image00100.png" alt="New Image 100">
+    </div>
   </div>
 
   <p class="figure-text">FIG. 1 shows a PCB with excess solder bridging at pad 13 and thin wires, indicating a defect.
