--- a/index.html
+++ b/index.html
@@ -367,6 +367,12 @@ FIG. 17 shows a burnt area with exposed wires and charred connections, indicatin
 FIG. 18 shows excessive solder covering pads 13 to 16, suggesting overheating and poor soldering; the PCB is defective.
 FIG. 19 shows excessive soldering and thermal stress near the top center, indicating poor practices and heat damage; the PCB is defective.
 FIG. 20 displays a prominent burn mark with melted solder and wires, suggesting serious electrical fault; the PCB is defective.
+FIG. 21 shows a PCB with a burnt trace and exposed copper, indicating damage that makes the board defective.
+FIG. 22 shows burn marks, charring, and a vertical crack, suggesting electrical or mechanical failure; the PCB is defective.
+FIG. 23 displays burn marks and a crack with exposed copper, indicating compromised integrity; the PCB is defective.
+FIG. 24 shows uneven solder joints near the top center, suggesting poor soldering quality; the PCB is defective.
+FIG. 25 shows discoloration and residue near pads 5 and 7, indicating burning or corrosion; the PCB is defective.
+
 </p>
 
 </body>
