--- a/index.html
+++ b/index.html
@@ -372,6 +372,31 @@ FIG. 22 shows burn marks, charring, and a vertical crack, suggesting electrical 
 FIG. 23 displays burn marks and a crack with exposed copper, indicating compromised integrity; the PCB is defective.
 FIG. 24 shows uneven solder joints near the top center, suggesting poor soldering quality; the PCB is defective.
 FIG. 25 shows discoloration and residue near pads 5 and 7, indicating burning or corrosion; the PCB is defective.
+FIG. 26 shows a PCB with excess solder bridging at pad 13 and thin wires, indicating a defect.
+FIG. 27 reveals a burnt central component with irregular soldering and wires, suggesting a defective PCB.
+FIG. 28 displays a burnt area affecting several components, indicating thermal damage and a defective board.
+FIG. 29 shows burn marks around R1 and compromised solder joints, marking the PCB as defective.
+FIG. 30 shows a clean layout but with central damage or cracking, suggesting a possible defect.
+FIG. 31 shows a large solder blob and custom wiring, indicating a defective or non-compliant PCB.
+FIG. 32 shows solder bridging and thin wires, suggesting poor soldering and a defective board.
+FIG. 33 shows messy soldering in the top right corner, indicating a defect that may affect reliability.
+FIG. 34 features excess solder forming a bridge, posing short-circuit risks and marking it as defective.
+FIG. 35 shows a clean layout with intact traces and no damage, indicating the PCB is not defective.
+FIG. 36 reveals overheating and burn damage from heavy soldering, making the PCB defective.
+FIG. 37 displays a clean layout with no visible damage, indicating the PCB is not defective.
+FIG. 38 presents a clean layout with intact traces, showing the PCB is not defective.
+FIG. 39 shows a PCB with a large solder blob and burn marks, indicating poor soldering and overheating; the PCB is defective.
+FIG. 40 displays a burnt, charred area with melted solder and damaged traces, suggesting electrical failure; the PCB is defective.
+FIG. 41 shows similar thermal damage and short-circuit signs as FIG. 15, making the PCB defective.
+FIG. 42 shows a burnt area with exposed wires and charred connections, indicating serious electrical failure; the PCB is defective.
+FIG. 43 shows excessive solder covering pads 13 to 16, suggesting overheating and poor soldering; the PCB is defective.
+FIG. 44 shows excessive soldering and thermal stress near the top center, indicating poor practices and heat damage; the PCB is defective.
+FIG. 45 displays a prominent burn mark with melted solder and wires, suggesting serious electrical fault; the PCB is defective.
+FIG. 46 shows a PCB with a burnt trace and exposed copper, indicating damage that makes the board defective.
+FIG. 47 shows burn marks, charring, and a vertical crack, suggesting electrical or mechanical failure; the PCB is defective.
+FIG. 48 displays burn marks and a crack with exposed copper, indicating compromised integrity; the PCB is defective.
+FIG. 49 shows uneven solder joints near the top center, suggesting poor soldering quality; the PCB is defective.
+FIG. 50 shows discoloration and residue near pads 5 and 7, indicating burning or corrosion; the PCB is defective.
 
 </p>
 
