--- a/index.html
+++ b/index.html
@@ -397,6 +397,56 @@ FIG. 47 shows burn marks, charring, and a vertical crack, suggesting electrical 
 FIG. 48 displays burn marks and a crack with exposed copper, indicating compromised integrity; the PCB is defective.
 FIG. 49 shows uneven solder joints near the top center, suggesting poor soldering quality; the PCB is defective.
 FIG. 50 shows discoloration and residue near pads 5 and 7, indicating burning or corrosion; the PCB is defective.
+FIG. 51 shows a PCB with excess solder bridging at pad 13 and thin wires, indicating a defect.
+FIG. 52 reveals a burnt central component with irregular soldering and wires, suggesting a defective PCB.
+FIG. 53 displays a burnt area affecting several components, indicating thermal damage and a defective board.
+FIG. 54 shows burn marks around R1 and compromised solder joints, marking the PCB as defective.
+FIG. 55 shows a clean layout but with central damage or cracking, suggesting a possible defect.
+FIG. 56 shows a large solder blob and custom wiring, indicating a defective or non-compliant PCB.
+FIG. 57 shows solder bridging and thin wires, suggesting poor soldering and a defective board.
+FIG. 58 shows messy soldering in the top right corner, indicating a defect that may affect reliability.
+FIG. 59 features excess solder forming a bridge, posing short-circuit risks and marking it as defective.
+FIG. 60 shows a clean layout with intact traces and no damage, indicating the PCB is not defective.
+FIG. 61 reveals overheating and burn damage from heavy soldering, making the PCB defective.
+FIG. 62 displays a clean layout with no visible damage, indicating the PCB is not defective.
+FIG. 63 presents a clean layout with intact traces, showing the PCB is not defective.
+FIG. 64 shows a PCB with a large solder blob and burn marks, indicating poor soldering and overheating; the PCB is defective.
+FIG. 65 displays a burnt, charred area with melted solder and damaged traces, suggesting electrical failure; the PCB is defective.
+FIG. 66 shows similar thermal damage and short-circuit signs as FIG. 15, making the PCB defective.
+FIG. 67 shows a burnt area with exposed wires and charred connections, indicating serious electrical failure; the PCB is defective.
+FIG. 68 shows excessive solder covering pads 13 to 16, suggesting overheating and poor soldering; the PCB is defective.
+FIG. 69 shows excessive soldering and thermal stress near the top center, indicating poor practices and heat damage; the PCB is defective.
+FIG. 70 displays a prominent burn mark with melted solder and wires, suggesting serious electrical fault; the PCB is defective.
+FIG. 71 shows a PCB with a burnt trace and exposed copper, indicating damage that makes the board defective.
+FIG. 72 shows burn marks, charring, and a vertical crack, suggesting electrical or mechanical failure; the PCB is defective.
+FIG. 73 displays burn marks and a crack with exposed copper, indicating compromised integrity; the PCB is defective.
+FIG. 74 shows uneven solder joints near the top center, suggesting poor soldering quality; the PCB is defective.
+FIG. 75 shows discoloration and residue near pads 5 and 7, indicating burning or corrosion; the PCB is defective.
+FIG. 76 shows a PCB with excess solder bridging at pad 13 and thin wires, indicating a defect.
+FIG. 77 reveals a burnt central component with irregular soldering and wires, suggesting a defective PCB.
+FIG. 78 displays a burnt area affecting several components, indicating thermal damage and a defective board.
+FIG. 79 shows burn marks around R1 and compromised solder joints, marking the PCB as defective.
+FIG. 80 shows a clean layout but with central damage or cracking, suggesting a possible defect.
+FIG. 81 shows a large solder blob and custom wiring, indicating a defective or non-compliant PCB.
+FIG. 82 shows solder bridging and thin wires, suggesting poor soldering and a defective board.
+FIG. 83 shows messy soldering in the top right corner, indicating a defect that may affect reliability.
+FIG. 84 features excess solder forming a bridge, posing short-circuit risks and marking it as defective.
+FIG. 85 shows a clean layout with intact traces and no damage, indicating the PCB is not defective.
+FIG. 86 reveals overheating and burn damage from heavy soldering, making the PCB defective.
+FIG. 87 displays a clean layout with no visible damage, indicating the PCB is not defective.
+FIG. 88 presents a clean layout with intact traces, showing the PCB is not defective.
+FIG. 89 shows a PCB with a large solder blob and burn marks, indicating poor soldering and overheating; the PCB is defective.
+FIG. 90 displays a burnt, charred area with melted solder and damaged traces, suggesting electrical failure; the PCB is defective.
+FIG. 91 shows similar thermal damage and short-circuit signs as FIG. 15, making the PCB defective.
+FIG. 92 shows a burnt area with exposed wires and charred connections, indicating serious electrical failure; the PCB is defective.
+FIG. 93 shows excessive solder covering pads 13 to 16, suggesting overheating and poor soldering; the PCB is defective.
+FIG. 94 shows excessive soldering and thermal stress near the top center, indicating poor practices and heat damage; the PCB is defective.
+FIG. 95 displays a prominent burn mark with melted solder and wires, suggesting serious electrical fault; the PCB is defective.
+FIG. 96 shows a PCB with a burnt trace and exposed copper, indicating damage that makes the board defective.
+FIG. 97 shows burn marks, charring, and a vertical crack, suggesting electrical or mechanical failure; the PCB is defective.
+FIG. 98 displays burn marks and a crack with exposed copper, indicating compromised integrity; the PCB is defective.
+FIG. 99 shows uneven solder joints near the top center, suggesting poor soldering quality; the PCB is defective.
+FIG. 100 shows discoloration and residue near pads 5 and 7, indicating burning or corrosion; the PCB is defective.
 
 </p>
 
